--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@ body {
 
 mark {
   background-color: transparent;
-  color: inherit; }
+  color: #E70090; }
 
 input::-moz-focus-inner {
   border: 0;
@@ -118,7 +118,7 @@ a {
     border-bottom-color: #E70090;
     color: #E70090 !important; }
     a:hover strong {
-      color: inherit; }
+      color: #E70090; }
 
 strong, b {
   color: #3d4449;
@@ -1033,7 +1033,7 @@ textarea {
   border-radius: 0.375em;
   border: none;
   border: solid 1px rgba(210, 215, 217, 0.75);
-  color: inherit;
+  color: #E70090;
   display: block;
   outline: 0;
   padding: 0 1em;
@@ -1056,7 +1056,7 @@ textarea {
   input[type="url"]:focus,
   select:focus,
   textarea:focus {
-    border-color: #f56a6a;
+    border-color: #E70090;
     box-shadow: 0 0 0 1px #f56a6a; }
 
 select {
@@ -1140,7 +1140,7 @@ input[type="radio"] {
   input[type="checkbox"]:checked + label:before,
   input[type="radio"]:checked + label:before {
     background: #3d4449;
-    border-color: #3d4449;
+    border-color: #E70090;
     color: #ffffff;
     content: '\f00c'; }
   input[type="checkbox"]:focus + label:before,
@@ -1350,7 +1350,7 @@ ul.icons {
     ul.icons li:last-child {
       padding-right: 0; }
     ul.icons li .icon {
-      color: inherit; }
+      color: #E70090; }
       ul.icons li .icon:before {
         font-size: 1.25em; }
 
@@ -1376,7 +1376,7 @@ ul.contact {
       font-family: 'Font Awesome 5 Free';
       font-weight: 400; }
     ul.contact li:before {
-      color: #f56a6a;
+      color: #E70090;
       display: inline-block;
       font-size: 1.5em;
       height: 1.125em;
@@ -1393,7 +1393,7 @@ ul.contact {
       ul.contact li:first-child:before {
         top: 0; }
     ul.contact li a {
-      color: inherit; }
+      color: #E70090; }
 
 /* Pagination */
 ul.pagination {
@@ -1496,7 +1496,7 @@ button,
   border-radius: 0.375em;
   border: 0;
   box-shadow: inset 0 0 0 2px #f56a6a;
-  color: #f56a6a !important;
+  color: #E70090 !important;
   cursor: pointer;
   display: inline-block;
   font-family: "Roboto Slab", serif;
@@ -1553,7 +1553,7 @@ button,
   input[type="button"].primary,
   button.primary,
   .button.primary {
-    background-color: #f56a6a;
+    background-color: #E70090;
     box-shadow: none;
     color: #ffffff !important; }
     input[type="submit"].primary:hover,
@@ -2086,7 +2086,7 @@ button,
     margin-bottom: 0; }
   #header .logo {
     border-bottom: 0;
-    color: inherit;
+    color: #E70090;
     font-family: "Roboto Slab", serif;
     font-size: 1.125em; }
   #header .icons {
@@ -2244,7 +2244,7 @@ button,
         position: absolute;
         right: 0; }
       #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-        color: #f56a6a; }
+        color: #E70090; }
       #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
         display: block; }
       #menu ul a.opener.active:before, #menu ul span.opener.active:before {
