--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1496,7 +1496,7 @@ button,
   border-radius: 0.375em;
   border: 0;
   box-shadow: inset 0 0 0 2px #E70090;
-  color: #E70090 !important;
+  color: #0399D6 !important;
   cursor: pointer;
   display: inline-block;
   font-family: "Roboto Slab", serif;
