--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1350,7 +1350,7 @@ ul.icons {
     ul.icons li:last-child {
       padding-right: 0; }
     ul.icons li .icon {
-      color: #E70090; }
+      color: #0399D6; }
       ul.icons li .icon:before {
         font-size: 1.25em; }
 
